# simple_tokenizers

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: 1_character_tokenizer.ipynb  2_word_tokenizer.ipynb  3_BPE_tokenizer.ipynb
simple_tokenizers/: __init__.py  base_tokenizer.py  bpe_tokenizer.py  word_tokenizer.py
src/simple_tokenizers/: base_tokenizer.py  bpe_tokenizer.py  character_tokenizer.py  word_tokenizer.py
tokenizers/: BPETokenizer.py  BaseTokenizer.py  CharacterTokenizer.py  WordTokenizer.py  __init__.py  bpe_tokenizer.py  character_tokenizer.py
